fixed table, added scrollbar

--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -1,3 +1,12 @@
 .container{
     background-color: #ACE7F8;
 }
+.scrollbar {
+    position: relative;
+    height: 700px;
+    overflow: auto;
+
+  }
+  .table-wrapper-scroll-y {
+    display: block;
+  }
